# limco

./: .env.example  .gitignore  MCP_SERVERS_LIST.md  QUICKSTART.md  README.md  pyproject.toml  rate_limiting.conf
autogen/: README.md
crewai/: README.md
crewai/coding_team/: QUICKSTART.md  README.md  pyproject.toml
crewai/coding_team/docs/: TROUBLESHOOTING_GUIDE.md
crewai/coding_team/src/limco/: main.py
docs/: MIXED_MODEL_STRATEGY.md  OPTIMIZED_MODEL_ASSIGNMENT.md  RATE_LIMITING_IMPLEMENTATION.md  RATE_LIMITING_UPDATE.md  WEB_SEARCH_TOOLS_COMPARISON.md
examples/: example_goals.md
langgraph/: README.md
langgraph/dev_team/: langgraph.json  pyproject.toml  upgrade_mcp_tools.py
langgraph/dev_team/docs/: GITHUB_INTEGRATION.md  GITHUB_MCP_INTEGRATION.md  (+4 more)
langgraph/init_team/: main.py
langgraph/limco_swarm/: langgraph.json
langgraph/recovery_agent/: README_CLI.md  advanced_repair.py  analyze_clone_size.py  cli_recovery.py  error_solutions_kb.json  langgraph.json  launch_admin_bash.sh  mbr_fixer.py  perfect_sd_clone.py  precise_clone.py  pyproject.toml  requirements.txt  requirements_cli.txt  run_admin_recovery.sh  run_as_admin.bat  run_real_recovery.py  run_recovery.ps1  sd_size_fixer.py  test_admin_recovery.py  test_clone_only.py  test_drive_size.py  test_fix.py  test_mount.py  ultimate_recovery.py
langgraph/recovery_agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langgraph/recovery_agent/src/recovery_agent/: __init__.py  edges.py  graph.py  llm_analysis.py  main.py  nodes.py  self_improvement.py  states.py
src/limco/: crew.py  main.py
swarm/: README.md
(+91 files in other folders)
